Use new env variables for Telegram and database

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
+NODE_ENV=development
 PORT=3000
-DATABASE_URL=mysql://user:password@localhost:3306/fineko
+
+DB_CLIENT=mysql2
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=user
+DB_PASSWORD=password
+DB_NAME=fineko
+
+# Якщо проєкт раптом очікує один рядок:
+# DATABASE_URL=mysql://user:password@localhost:3306/fineko
+
 JWT_SECRET=
-OPENAI_API_KEY=
 TELEGRAM_BOT_TOKEN=
+TELEGRAM_SECRET=
+FRONTEND_URL=https://studio--fineko-tasktracker.us-central1.hosted.app
